edition = "2023";

package wayplatform.connect.tachograph.vu.v1;

// Represents the data structure for a TechnicalDataGen1 transfer.
// See Appendix 7, Section 2.2.6.6.
message TechnicalDataGen1 {

  message VuIdentification {
    // See Appendix 1, 2.205
    string manufacturer_name = 1;
    string manufacturer_address = 2;
    string part_number = 3;
    // See Appendix 1, 2.72 ExtendedSerialNumber.
    string serial_number = 4;
    // See Appendix 1, 2.225 VuSoftwareIdentification.
    string software_version = 5;
    uint32 software_installation_date_seconds = 6;
    uint32 manufacturing_date_seconds = 7;
    string approval_number = 8;
  }

  message PairedSensor {
    // See Appendix 1, 2.145
    // See Appendix 1, 2.148 & 2.72.
    string serial_number = 1;
    string approval_number = 2;
    uint32 pairing_date_seconds = 3;
  }

  message CalibrationRecord {
    // See Appendix 1, 2.174
    uint32 purpose = 1;
    string workshop_name = 2;
    string workshop_address = 3;
    string workshop_card_number = 4;
    uint32 workshop_card_expiry_date = 5;
    string vin = 6;
    string vrn = 7;
    uint32 registering_nation = 8;
    uint32 w_vehicle_characteristic_constant = 9;
    uint32 k_constant_of_recording_equipment = 10;
    uint32 l_tyre_circumference_mm = 11;
    string tyre_size = 12;
    uint32 authorised_speed_kmph = 13;
    uint32 old_odometer_value_km = 14;
    uint32 new_odometer_value_km = 15;
    uint32 old_time_value_seconds = 16;
    uint32 new_time_value_seconds = 17;
    uint32 next_calibration_date_seconds = 18;
  }

  VuIdentification vu_identification = 1;
  PairedSensor paired_sensor = 2;
  repeated CalibrationRecord calibration_records = 3;

  // See Appendix 1, 2.149. 128 bytes.
  bytes signature = 4;
}